--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 			<ul class="copyright">
 				<li>&copy; BLOG</li>
 				<li>DESIGN : <a href="https://html5up.net/">HTML5 UP</a></li>
-				<li>IMITATED BY : <a href="#">PRIMERS</a></li>
+				<li>IMITATED BY : <a href="http://primerscern.xyz" target="blank">PRIMERS</a></li>
 			</ul>
 		</footer>
 
