--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
 			</div>
 		</section><!-- end skillbox -->
 
-		<section id="ad">
+		<section id="other">
 			<div class="frame">
-					<div class="ad-text">
+					<div class="other-text">
 						<h2>其实可以说这是一则广告</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, repellat!</p>
 					</div>
-					<div class="ad-button">
+					<div class="other-button">
 						<button class="get-me">Get me !</button>
 						<button class="get-out">Get me out !</button>
 					</div>
